oppgradere demoland til versjon 2.9.0 og java 17